--- a/manage.html
+++ b/manage.html
@@ -47,7 +47,7 @@ function processReqChange(){
 </script>
 </head>
 <body>
-<form method="get" name="info" id="videoManage" action="handle.php">
+<form method="get" name="info" id="videoManage" action="handle.php" class="center">
 <input type="hidden" name="type" value="manageVideo">
 <select name="operation" id="operation">
 <option value="insert" selected="selected">insert</option>
